sbin_SCRIPTS = zorpctl

sysconf_DATA = instances.conf.sample zorpctl.conf.sample

EXTRA_DIST = $(sysconf_DATA) \
	 __init__.py         \
	CommandResults.py    \
	InstanceClass.py     \
	InstancesConf.py     \
	Instances.py         \
	PluginAlgorithms.py  \
	prefix.py            \
	ProcessAlgorithms.py \
	SZIGMessages.py      \
	szig.py              \
	UInterface.py        \
	utils.py
